Añado thead y tbody a la tabla

--- a/practica.html
+++ b/practica.html
@@ -78,27 +78,31 @@
    
     <table>
       <caption>Título de nuestra Tabla Molona</caption>
-      <tr>
-        <th>Nombre</th>
-        <th>Apellidos</th>
-        <th>Teléfono</th>
-        <th>DNI/NIE</th>
-        <th>Deportes</th>
-      </tr>
-      <tr>
-        <td>Carlos</td>
-        <td>Casalengua</td>
-        <td>987654321</td>
-        <td>12345678-A</td>
-        <td>Fútbol, Pádel</td>
-      </tr>
-      <tr>
-        <td>Jesús</td>
-        <td>Cárdenas</td>
-        <td>987654329</td>
-        <td>12345678-Z</td>
-        <td>Rugby, Pelota vasca</td>
-      </tr>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Apellidos</th>
+          <th>Teléfono</th>
+          <th>DNI/NIE</th>
+          <th>Deportes</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Carlos</td>
+          <td>Casalengua</td>
+          <td>987654321</td>
+          <td>12345678-A</td>
+          <td>Fútbol, Pádel</td>
+        </tr>
+        <tr>
+          <td>Jesús</td>
+          <td>Cárdenas</td>
+          <td>987654329</td>
+          <td>12345678-Z</td>
+          <td>Rugby, Pelota vasca</td>
+        </tr>
+      </tbody>
     </table>
   </main>
 
