Cambio el input a number

--- a/practica.html
+++ b/practica.html
@@ -59,7 +59,7 @@
         <fieldset>
           <legend>Otros datos</legend>
 
-          <p><label for="siblingsNumber">Nº de hermanos/as</label> <input type="text" name="siblingsNumber" id="siblingsNumber"></p>
+          <p><label for="siblingsNumber">Nº de hermanos/as</label> <input type="number" name="siblingsNumber" id="siblingsNumber"></p>
           <p>Deportes favoritos:</p>
   
           <ol>
